RESOLVED FIXED 252727
Fix build due to availability macros in WKWebpagePreferencesPrivate.h
https://bugs.webkit.org/show_bug.cgi?id=252727
Summary Fix build due to availability macros in WKWebpagePreferencesPrivate.h
David Kilzer (:ddkilzer)
Reported 2023-02-21 23:00:54 PST
Fix build due to availability macros in WKWebpagePreferencesPrivate.h. In file included from WebKitTestRunner/Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:52: WebKit.framework/PrivateHeaders/WKWebpagePreferencesPrivate.h:85:73: error: expected '}' or ',' _WKWebsiteNetworkConnectionIntegrityPolicyWebSearchContent = 1 << 5 API_AVAILABLE(macos(13.3), ios(NA)), ^ In file included from WebKitTestRunner/Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:52: WebKit.framework/PrivateHeaders/WKWebpagePreferencesPrivate.h:86:74: error: expected '}' or ',' _WKWebsiteNetworkConnectionIntegrityPolicyEnhancedTelemetry = 1 << 6 API_AVAILABLE(macos(13.3), ios(NA)), ^ In file included from WebKitTestRunner/Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:52: WebKit.framework/PrivateHeaders/WKWebpagePreferencesPrivate.h:87:74: error: expected '}' or ',' _WKWebsiteNetworkConnectionIntegrityPolicyRequestValidation = 1 << 7 API_AVAILABLE(macos(13.3), ios(NA)), ^ In file included from WebKitTestRunner/Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:52: WebKit.framework/PrivateHeaders/WKWebpagePreferencesPrivate.h:88:84: error: expected '}' or ',' _WKWebsiteNetworkConnectionIntegrityPolicySanitizeLookalikeCharacters = 1 << 8 API_AVAILABLE(macos(13.3), ios(NA)), ^ Regressed in Bug 252437 (260627@main) and in Bug 252641 (260632@main).
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-21 23:01:32 PST
David Kilzer (:ddkilzer)
Comment 2 2023-02-21 23:03:06 PST
Note: I used Source/WebKit/Shared/API/Cocoa/_WKRenderingProgressEvents.h to know where to put the availability macros.
David Kilzer (:ddkilzer)
Comment 3 2023-02-21 23:04:17 PST
EWS
Comment 4 2023-02-21 23:30:33 PST
Committed 260660@main (64e9b86994e7): <https://commits.webkit.org/260660@main> Reviewed commits have been landed. Closing PR #10499 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.