Cherry-pick 64e9b86994e7. rdar://problem/105765090

Fix build due to availability macros in WKWebpagePreferencesPrivate.h
    https://bugs.webkit.org/show_bug.cgi?id=252727
    <rdar://105765090>

    Unreviewed build fix that was reviewed by Wenson Hsieh anyway.

    * Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferencesPrivate.h:
    - Move availability macros to the proper location.

    Canonical link: https://commits.webkit.org/260660@main

Canonical link: https://commits.webkit.org/259548.243@safari-7615-branch